# MAT3d

./: CMakeLists.txt  README.md
example/: 3d_thermal
example/2d/: C2.tiff  main.cpp
example/3d/: in_struct.txt  main.cpp  rve65.txt
example/3d_thermal/: in_therm.txt
example/reconst3d/: input_opt.txt  main.cpp
include/: CImg.h  FFT_analysis2D.hpp  FFT_analysis3D.hpp  FFT_thermal3D.hpp  Img.hpp  percolation.hpp  reconstruction.hpp
src/2d/: FFT_analysis2D.cpp
src/3d/: FFT_analysis3D.cpp
src/3dTherm/: FFT_thermal3D.cpp
src/percolation/: percolation.cpp
src/rec/: reconstruction.cpp
